# cvermeer

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
cvermeer/colors/: color.py
cvermeer/shapes/: point.py  shape.py
cvermeer/widgets/: __init__.py  dynamic_widget.py  static_widget.py  widget.py
cvermeer/widgets/tools/: text_widget.py  time_widget.py
examples/: main.py
tests/classes/: test_colors.py  test_shape.py  test_shapes.py  test_widget.py
