[tool.poetry]
name = "cvermeer"
version = "0.0.0"
description = "A GUI library for opencv's frames."
repository = "https://github.com/ocular-systems/cvermeer"
authors = ["Anatole-DC <adechauveron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
opencv-python = "^4.7.0.72"
opencv-contrib-python = "^4.7.0.72"

[tool.poetry.group.format.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
